--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<blockquote>
-		<p class="questions" style="background-color: #f8fffe; height: 50px; margin-top: 20px; padding: 15px; max-width: 600px; border-left: 8px solid green;">Who was the first female to become the governor of an Indian state?</p>
+		<p class="questions">Who was the first female to become the governor of an Indian state?</p>
 	</blockquote>
 
 	<blockquote>
-		<p class="questions" style="background-color: #f8fffe; height: 50px; margin-top: 20px; padding: 15px; max-width: 600px; border-left: 8px solid green;">Who among first Woman to climb Mount Everest twice?</p>
+		<p class="questions">Who among first Woman to climb Mount Everest twice?</p>
 	</blockquote>
 
 	<blockquote>
-		<p class="questions" style="background-color: #f8fffe; height: 50px; margin-top: 20px; padding: 15px; max-width: 600px; border-left: 8px solid green;">Who is President of India?</p>
+		<p class="questions">Who is President of India?</p>
 	</blockquote>
 	<script type="text/javascript" src="./script.js">
 </script>
