--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<p class="questions">Who among first Woman to climb Mount Everest twice?</p>
 	</blockquote>
 
-	<blockquote>
-		<p class="questions">Who is President of India?</p>
+	<blockquote class="questions">
+		<p>Who is President of India?</p>
 	</blockquote>
 	<script type="text/javascript" src="./script.js">
 </script>
